syntax = "proto3";
package logs_rpc;

service LogsRpc {
  rpc ReloadLogLevel(ReloadLevelRequest) returns (CommonRpcResult);
  rpc ToggleDebugMode(DebugModeRequest) returns (CommonRpcResult);
}

enum Level {
  OFF = 0;
  ERROR = 1;
  WARN = 2;
  INFO = 3;
  DEBUG = 4;
  TRACE = 5;
}

message ReloadLevelRequest { Level log_level = 1; }

message DebugModeRequest { bool enabled = 1; }

message CommonRpcResult {
  bool success = 1;
  optional string msg = 2;
}
